revert: "feat!: bump checkstyle, gradle, java, mockito, spotless"
This reverts commit fb973c7f89dfe6a1a7c8a19379c2b47777bbeddd.
vogueSuppress coppuccino and vogue upgrades
resolve CVE blocking pipeline