@@ -1,8 +1,8 @@
 plugins {
   id "idea"
-  id "com.github.mxenabled.coppuccino" version "6.+" apply false
-  id "com.github.mxenabled.vogue" version "3.+"
-  id "io.freefair.lombok" version "8.14.3" apply false
+  id "com.github.mxenabled.coppuccino" version "5.+" apply false
+  id "com.github.mxenabled.vogue" version "2.+"
+  id "io.freefair.lombok" version "8.+" apply false
   id "io.github.gradle-nexus.publish-plugin" version "1.1.+"
 }
 
@@ -29,26 +29,30 @@ allprojects {
   group "com.mx.path-core"
   description "MX Path Core"
   version rootProject.version
-
-  java {
-    toolchain {
-      languageVersion = JavaLanguageVersion.of(21)
-    }
-  }
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 
   repositories {
     mavenCentral()
     mavenLocal()
   }
 
-  configurations.all {
-    //remove after upgrading checkstyle 13.0.0
+  configurations.configureEach {
     resolutionStrategy.eachDependency { details ->
+      //Uncontrolled Recursion [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHECOMMONS-10734078] in org.apache.commons:commons-lang3@3.17.0
+      //    introduced by net.sourceforge.pmd:pmd-java@7.16.0 > org.apache.commons:commons-lang3@3.17.0 and 7 other path(s)
+      //  This issue was fixed in versions: 3.18.0
       if (details.requested.group == "org.apache.commons" && details.requested.name == "commons-lang3") {
         details.useVersion "3.18.0"
       }
+      //Improper Validation of Certificate with Host Mismatch [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHELOGGINGLOG4J-14532782] in org.apache.logging.log4j:log4j-core@2.25.2
+      //    introduced by com.github.spotbugs:spotbugs@4.9.8 > org.apache.logging.log4j:log4j-core@2.25.2
+      //  This issue was fixed in versions: 2.25.3
+      else if (details.requested.group == "org.apache.logging.log4j" && details.requested.name == "log4j-core") {
+        details.useVersion "2.25.3"
+      }
     }
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    resolutionStrategy.cacheChangingModulesFor 0, "seconds"
   }
 }
 
@@ -61,7 +65,7 @@ subprojects {
     apply plugin: "io.freefair.lombok"
 
     ext {
-      mockitoVersion = "5.21.0"
+      mockitoVersion = "[5.0,6.0)"
       spockVersion = "2.4-M6-groovy-3.0"
       junitVersion = "5.14.0"
     }
@@ -112,19 +116,14 @@ subprojects {
         api "com.sun.xml.bind:jaxb-impl:4.0.6!!"
         api "org.glassfish.jaxb:jaxb-runtime:4.0.6!!"
         // -----------------------------------------------------------------
-
       }
 
-      testImplementation "org.mockito:mockito-core:${project.ext.mockitoVersion}"
+      testImplementation "org.mockito:mockito-inline:${project.ext.mockitoVersion}"
       testImplementation "org.spockframework:spock-core:${project.ext.spockVersion}"
       testImplementation "org.junit.jupiter:junit-jupiter-api:${project.ext.junitVersion}"
     }
 
-    test {
-      useJUnitPlatform()
-      // restore reflection on base java classes to fix issue w/ tests
-      jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-    }
+    test { useJUnitPlatform() }
 
     compileJava { options.compilerArgs << "-parameters" }
 
@@ -145,12 +144,12 @@ subprojects {
     }
 
     task sourcesJar(type: Jar, dependsOn: classes) {
-      archiveClassifier = "sources"
+      classifier = "sources"
       from sourceSets.main.allSource
     }
 
     task packageJavadoc(type: Jar) {
-      archiveClassifier = "javadoc"
+      classifier = "javadoc"
       from javadoc
     }
 
@@ -244,12 +243,6 @@ task spotlessApply {
   }
 }
 
-sourceSets {
-  main {
-    java { srcDir "build/generated/sources/annotationProcessor" }
-  }
-}
-
 task subdependencies {
   subprojects.each {
     if (it.name != platformProject) {
@@ -264,6 +257,6 @@ task subdependencies {
 project.tasks.getByPath("dependencies").finalizedBy("subdependencies")
 
 wrapper {
-  gradleVersion = "8.14.3"
+  gradleVersion = "7.6.4"
   distributionType = Wrapper.DistributionType.ALL
 }
